Add file readme tag sync
