# api/router/api.go
@@ -104,6 +104,7 @@ func NewRouter(config *config.Config, enableSwagger bool) (*gin.Engine, error) {
 		modelsGroup.PUT("/:namespace/:name", modelHandler.Update)
 		modelsGroup.DELETE("/:namespace/:name", modelHandler.Delete)
 		modelsGroup.GET("/:namespace/:name", modelHandler.Show)
+		modelsGroup.GET("/:namespace/:name/all_files", modelHandler.AllFiles)
 		modelsGroup.GET("/:namespace/:name/relations", modelHandler.Relations)
 		modelsGroup.GET("/:namespace/:name/branches", middleware.RepoType(types.ModelRepo), repoCommonHandler.Branches)
 		modelsGroup.GET("/:namespace/:name/tags", middleware.RepoType(types.ModelRepo), repoCommonHandler.Tags)
@@ -184,6 +185,7 @@ func NewRouter(config *config.Config, enableSwagger bool) (*gin.Engine, error) {
 		datasetsGroup.PUT("/:namespace/:name", dsHandler.Update)
 		datasetsGroup.DELETE("/:namespace/:name", dsHandler.Delete)
 		datasetsGroup.GET("/:namespace/:name", dsHandler.Show)
+		datasetsGroup.GET("/:namespace/:name/all_files", dsHandler.AllFiles)
 		datasetsGroup.GET("/:namespace/:name/relations", dsHandler.Relations)
 		datasetsGroup.GET("/:namespace/:name/branches", middleware.RepoType(types.DatasetRepo), repoCommonHandler.Branches)
 		datasetsGroup.GET("/:namespace/:name/tags", middleware.RepoType(types.DatasetRepo), repoCommonHandler.Tags)
